--- a/DG_1.ipynb
+++ b/DG_1.ipynb
@@ -104,6 +104,8 @@
    "source": [
     "input_dir = 'raw_csv_files'\n",
     "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f))]\n",
+    "if '.gitignore' in input_files:\n",
+    "    input_files.remove('.gitignore')\n",
     "input_files.sort()\n",
     "\n",
     "input_file_code = dict()\n",
@@ -280,7 +282,7 @@
    "source": [
     "Comparing every pair of families to detect isomorphy groups\n",
     "\n",
-    "need much time, O(n^2)"
+    "O(n^2)"
    ]
   },
   {
@@ -293,6 +295,7 @@
     "checked = list()\n",
     "H = nx.Graph() # graph of graphs\n",
     "for fam1 in range(0, number_of_families):\n",
+    "    printProgressBar(fam1 + 1, number_of_families, prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)\n",
     "    if fam1 in checked:\n",
     "        continue\n",
     "    H.add_node(fam1)\n",
@@ -304,8 +307,7 @@
     "        if nx.is_isomorphic(G1, G2, node_match=lambda v1,v2: v1['label'] == v2['label'],\\\n",
     "                            edge_match=lambda e1,e2: e1['label'] == e2['label']):\n",
     "            checked.append(fam2)\n",
-    "            H.add_edge(fam1, fam2)\n",
-    "    printProgressBar(fam1 + 1, number_of_families, prefix = 'Progress:', suffix = 'complete', length = 50, decimals = 2)"
+    "            H.add_edge(fam1, fam2)"
    ]
   },
   {
@@ -451,6 +453,8 @@
     "L = nx.DiGraph()\n",
     "family_dir = 'DG-families'\n",
     "family_files = [f for f in listdir(family_dir) if isfile(join(family_dir, f))]\n",
+    "if '.gitignore' in family_files:\n",
+    "    family_files.remove('.gitignore')\n",
     "for family_file in family_files:\n",
     "    group_id = family_file.split(' ')[0].split('-')[0]\n",
     "    if group_id != group_prec and group_prec != '':\n",
