--- a/DG_2.ipynb
+++ b/DG_2.ipynb
@@ -134,6 +134,8 @@
    "source": [
     "input_dir = 'DG-families'\n",
     "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f))]\n",
+    "if '.gitignore' in input_files:\n",
+    "    input_files.remove('.gitignore')\n",
     "output_dir = 'DG-graph-binary'\n",
     "\n",
     "for input_file in input_files:\n",
@@ -202,6 +204,9 @@
    "source": [
     "input_dir = 'DG-graph-binary'\n",
     "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f))]\n",
+    "if '.gitignore' in input_files:\n",
+    "    input_files.remove('.gitignore')\n",
+    "input_files.sort()\n",
     "input_files.sort()\n",
     "ignored = []\n",
     "for i in ignored:\n",
@@ -299,6 +304,9 @@
    "outputs": [],
    "source": [
     "context_files = [f for f in listdir(context_folder) if isfile(join(context_folder, f))]\n",
+    "if '.gitignore' in context_files:\n",
+    "    context_files.remove('.gitignore')\n",
+    "input_files.sort()\n",
     "context_files.sort()\n",
     "context_join = pd.read_csv(join(context_folder, 'DG-context-1.0.csv'), header=0, index_col=0)\n",
     "for i in ignored:\n",
@@ -376,6 +384,8 @@
     "family_ids = context_with_header.index\n",
     "\n",
     "families = [f for f in listdir('DG-families') if isfile(join('DG-families', f))]\n",
+    "if '.gitignore' in families:\n",
+    "    families.remove('.gitignore')\n",
     "families_dict = dict()  # contains the representative word for a given family\n",
     "for f in families:\n",
     "    elements = f.replace('.txt', '').split()\n",
@@ -405,7 +415,6 @@
     "            L1.add_node(line.split()[0])\n",
     "            L2.add_node(line.split()[0])\n",
     "            \n",
-    "families = [f for f in listdir('DG-families') if isfile(join('DG-families', f))]\n",
     "group_prev = ''\n",
     "counter = 0\n",
     "for file_name in families:\n",
