--- a/DG_3.ipynb
+++ b/DG_3.ipynb
@@ -81,10 +81,14 @@
     "graph_filenames = list()\n",
     "graph_binary_filenames = list()\n",
     "for f in listdir('DG-graph'):\n",
+    "    if f == '.gitignore':\n",
+    "        continue\n",
     "    if isfile(join('DG-graph', f)):\n",
     "        if f.split()[0] not in ignored:\n",
     "            graph_filenames.append(f)\n",
     "for f in listdir('DG-graph-binary'):\n",
+    "    if f == '.gitignore':\n",
+    "        continue\n",
     "    if isfile(join('DG-graph-binary', f)):\n",
     "        if f not in ignored:\n",
     "            graph_binary_filenames.append(f)\n",
@@ -328,6 +332,8 @@
    "source": [
     "binary_dir = 'DG-graph-binary'\n",
     "input_files = [f for f in listdir(binary_dir) if isfile(join(binary_dir, f))]\n",
+    "if '.gitignore' in input_files:\n",
+    "    input_files.remove('.gitignore')\n",
     "input_files.sort()\n",
     "print(len(input_files), 'families')"
    ]
