--- a/D_2.ipynb
+++ b/D_2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e9c0495",
+   "id": "a08708cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,23 +20,7 @@
     "from networkx.drawing.nx_pydot import write_dot\n",
     "from utils import printProgressBar\n",
     "\n",
-    "# glawinette column number\n",
-    "lemma1 = 0\n",
-    "lemma2 = 1\n",
-    "cat1 = 2\n",
-    "cat2 = 3\n",
-    "origine_morpho = 4\n",
-    "origine_def = 5\n",
-    "BAP1 = 6\n",
-    "BAP2 = 7\n",
-    "BAPsize = 8\n",
-    "FAP1 = 9\n",
-    "FAP2 = 10\n",
-    "FAPsize = 11\n",
-    "radical = 12\n",
-    "FAPtype = 13\n",
-    "\n",
-    "# demonette column number\n",
+    "# column number\n",
     "graph_1 = 3\n",
     "graph_2 = 6\n",
     "cat_1 = 8\n",
@@ -49,49 +33,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd8d42f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "folders_needed = ['DG-graph-binary', 'DG-contexts', 'DG-posets', 'DG-subposets']\n",
-    "for f in folders_needed:\n",
-    "    if not os.path.exists(f):\n",
-    "        os.makedirs(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ddc7d76",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def FAPconverter(input_fap):\n",
-    "    return input_fap.replace('(.+)', 'X').replace('$', '').replace('^', '')\n",
-    "\n",
-    "def category_shortening(cat):\n",
-    "    if cat != 'Num' and cat[0] == 'N':\n",
-    "        if cat[1] == 'p':  # nom propre\n",
-    "            return 'Np'\n",
-    "        return 'N'  # nom\n",
-    "    return cat\n",
-    "\n",
-    "header = ''\n",
-    "glawi_dict = dict()\n",
-    "with codecs.open('glawinette-series.csv', 'r', encoding='utf-8') as f:\n",
-    "    for line_num, line in enumerate(f):\n",
-    "        if line_num >= 1:\n",
-    "            elements = line.replace('\\n','').replace(' ','').split('\\t')\n",
-    "            glawi_dict[(elements[lemma1], elements[lemma2])] = FAPconverter(elements[FAP1]) + '-' + FAPconverter(elements[FAP2])\n",
-    "            glawi_dict[(elements[lemma2], elements[lemma1])] = FAPconverter(elements[FAP2]) + '-' + FAPconverter(elements[FAP1])\n",
-    "print(len(glawi_dict))"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "94c4ef78",
+   "id": "fab796a2",
    "metadata": {},
    "source": [
     "# 1. Creation of binary file for each graph"
@@ -99,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3edc3fc",
+   "id": "a3a9817d",
    "metadata": {},
    "source": [
     "In a binary file, each node also contains the lexeme's frequency, obtained from COW"
@@ -108,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03d4dd41",
+   "id": "3444cf58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,15 +71,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8baf0998",
+   "id": "0dbe383d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_dir = 'DG-families'\n",
+    "def category_shortening(cat):\n",
+    "    if cat != 'Num' and cat[0] == 'N':\n",
+    "        if cat[1] == 'p':  # nom propre\n",
+    "            return 'Np'\n",
+    "        return 'N'  # nom\n",
+    "    return cat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dddbfb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_dir = 'D-families'\n",
     "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f))]\n",
     "if '.gitignore' in input_files:\n",
     "    input_files.remove('.gitignore')\n",
-    "output_dir = 'DG-graph-binary'\n",
+    "output_dir = 'D-graph-binary'\n",
     "\n",
     "for input_file in input_files:\n",
     "    fam_id = input_file.split()[0]\n",
@@ -161,26 +119,12 @@
     "                H.add_node(va, label=category_shortening(elements[cat_1]), frequency=freq_a)\n",
     "                H.add_node(vb, label=category_shortening(elements[cat_2]), frequency=freq_b)\n",
     "                if elements[orientation] == 'as2de' or elements[orientation] == 'as2des':\n",
-    "                    if (elements[graph_1], elements[graph_2]) in glawi_dict.keys():\n",
-    "                        H.add_edge(va, vb, label=elements[cstr_1] + '-' + elements[cstr_2]\\\n",
-    "                                  + '$' + glawi_dict.get((elements[graph_1], elements[graph_2])))\n",
-    "                    else:\n",
-    "                        H.add_edge(va, vb, label=elements[cstr_1] + '-' + elements[cstr_2])\n",
+    "                    H.add_edge(va, vb, label=elements[cstr_1] + '-' + elements[cstr_2])\n",
     "                elif elements[orientation] == 'de2as' or elements[orientation] == 'des2as':\n",
-    "                    if (elements[graph_2], elements[graph_1]) in glawi_dict.keys():\n",
-    "                        H.add_edge(vb, va, label=elements[cstr_2] + '-' + elements[cstr_1]\\\n",
-    "                                  + '$' + glawi_dict.get((elements[graph_2], elements[graph_1])))\n",
-    "                    else:\n",
-    "                        H.add_edge(vb, va, label=elements[cstr_2] + '-' + elements[cstr_1])\n",
+    "                    H.add_edge(vb, va, label=elements[cstr_2] + '-' + elements[cstr_1])\n",
     "                else:\n",
-    "                    if (elements[graph_1], elements[graph_2]) in glawi_dict.keys():\n",
-    "                        H.add_edge(va, vb, label=elements[cstr_1] + '-' + elements[cstr_2] + '_' + elements[orientation]\\\n",
-    "                                  + '$' + glawi_dict.get((elements[graph_1], elements[graph_2])))\n",
-    "                        H.add_edge(vb, va, label=elements[cstr_2] + '-' + elements[cstr_1] + '_' + elements[orientation]\\\n",
-    "                                  + '$' + glawi_dict.get((elements[graph_2], elements[graph_1])))\n",
-    "                    else:\n",
-    "                        H.add_edge(va, vb, label=elements[cstr_1] + '-' + elements[cstr_2] + '_' + elements[orientation])\n",
-    "                        H.add_edge(vb, va, label=elements[cstr_2] + '-' + elements[cstr_1] + '_' + elements[orientation])\n",
+    "                    H.add_edge(va, vb, label=elements[cstr_1] + '-' + elements[cstr_2] + '_' + elements[orientation])\n",
+    "                    H.add_edge(vb, va, label=elements[cstr_2] + '-' + elements[cstr_1] + '_' + elements[orientation])\n",
     "    graph_file = open(join(output_dir, fam_id), 'wb')\n",
     "    pickle.dump(H, graph_file)\n",
     "    graph_file.close()\n",
@@ -189,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6037a1d",
+   "id": "9b6b1963",
    "metadata": {},
    "source": [
     "# 2. Creation of formal context"
@@ -198,11 +142,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e53c2afd",
+   "id": "f9b13826",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_dir = 'DG-graph-binary'\n",
+    "input_dir = 'D-graph-binary'\n",
     "input_files = [f for f in listdir(input_dir) if isfile(join(input_dir, f))]\n",
     "if '.gitignore' in input_files:\n",
     "    input_files.remove('.gitignore')\n",
@@ -220,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a78aa344",
+   "id": "89b5c7a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,17 +177,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cae79d8b",
+   "id": "0c102403",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def edge_compare(e1, e2):\n",
-    "    if '$' in e1['label'] and '$' not in e2['label']:\n",
-    "        return e1['label'].split('$')[0] == e2['label']\n",
-    "    else:\n",
-    "        return e1['label'] == e2['label']\n",
-    "\n",
-    "context_folder = 'DG-contexts'\n",
+    "context_folder = 'D-contexts'\n",
     "subgroup_prev = ''\n",
     "context = pd.DataFrame()\n",
     "counter = -1\n",
@@ -253,11 +191,9 @@
     "    if subgroup_id == subgroup_prev:\n",
     "        continue\n",
     "    counter += 1\n",
-    "#     if counter < 2000:\n",
-    "#         continue\n",
     "    if counter % 1000 == 0 and counter > 0:\n",
     "        context.index = input_files\n",
-    "        context.to_csv(join(context_folder, 'DG-context-' + str(counter/1000) + '.csv'))\n",
+    "        context.to_csv(join(context_folder, 'D-context-' + str(counter/1000) + '.csv'))\n",
     "        context = pd.DataFrame()\n",
     "    G2 = pickle.load(open(join(input_dir, subgraph), 'rb'))\n",
     "    G2_node_count = node_count_dict.get(subgraph)\n",
@@ -279,14 +215,10 @@
     "        G1_node_count = node_count_dict.get(supergraph)\n",
     "        if G1_node_count >= G2_node_count:\n",
     "            G1 = pickle.load(open(join(input_dir, supergraph), 'rb'))\n",
-    "            GM = isomorphism.DiGraphMatcher(G1, G2, node_match=lambda v1,v2: v1['label'] == v2['label'], edge_match=edge_compare)\n",
+    "            GM = isomorphism.DiGraphMatcher(G1, G2, node_match=lambda v1,v2: v1['label'] == v2['label'],\\\n",
+    "                                            edge_match=lambda e1,e2: e1['label'] == e2['label'])\n",
     "            if GM.subgraph_is_isomorphic():\n",
     "                membership[counter2] = 1\n",
-    "#                 try:\n",
-    "#                     membership_of_G1 = context[supergroup_id.replace('F', 'G')]\n",
-    "#                     membership = (membership_of_G1 | membership).astype(int)\n",
-    "#                 except KeyError:\n",
-    "#                     pass\n",
     "        supergroup_prev = supergroup_id\n",
     "    subgroup_prev = subgroup_id\n",
     "    membership = pd.Series(membership, name=subgroup_id.replace('F', 'G'))\n",
@@ -298,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d472d985",
+   "id": "730292d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,16 +255,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ad84a67",
+   "id": "72d56d62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "context_join.to_csv('DG-context.csv')"
+    "context_join.to_csv('D-context.csv')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bb848aab",
+   "id": "99645eeb",
    "metadata": {},
    "source": [
     "# 3. Calculation of AOC-poset"
@@ -341,31 +273,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8745934",
+   "id": "0211ecef",
    "metadata": {},
    "outputs": [],
    "source": [
     "context_without_header = 'context_without_header.csv'\n",
-    "context_with_header = pd.read_csv('DG-context.csv', header=0, index_col=0)\n",
+    "context_with_header = pd.read_csv('D-context.csv', header=0, index_col=0)\n",
     "context_with_header.to_csv(context_without_header, header=False, index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6652ba6",
+   "id": "979e5058",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d DG-posets/aoc-simplified.dot -f SIMPLIFIED -z')\n",
+    "os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d D-posets/aoc-simplified.dot -f SIMPLIFIED -z')\n",
     "#os.system('dot -Tpdf posets/families_simplified.dot -o posets/families_simplified.pdf')\n",
-    "os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d DG-posets/aoc-full.dot -f FULL -z')\n",
+    "os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d D-posets/aoc-full.dot -f FULL -z')\n",
     "#os.system('java -jar AOCPosetBuilder.jar -i ' + context_without_header + ' -a HERMES -d posets/families_minimal.dot -f MINIMAL')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5ba50ff8",
+   "id": "71391867",
    "metadata": {},
    "source": [
     "# 4. Calculation of subposets (parents and children of each concept)"
@@ -374,15 +306,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf03df2d",
+   "id": "0f05ea24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "context_with_header = pd.read_csv('DG-context.csv', header=0, index_col=0)\n",
+    "context_with_header = pd.read_csv('D-context.csv', header=0, index_col=0)\n",
     "col_names = context_with_header.columns\n",
     "family_ids = context_with_header.index\n",
     "\n",
-    "families = [f for f in listdir('DG-families') if isfile(join('DG-families', f))]\n",
+    "families = [f for f in listdir('D-families') if isfile(join('D-families', f))]\n",
     "if '.gitignore' in families:\n",
     "    families.remove('.gitignore')\n",
     "families_dict = dict()  # contains the representative word for a given family\n",
@@ -394,14 +326,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a63ca9b",
+   "id": "f464d6dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "full_dot = 'aoc-full.dot'\n",
     "simplified_dot = 'aoc-simplified.dot'\n",
-    "directory = 'DG-posets'\n",
-    "out_directory = 'DG-subposets'\n",
+    "directory = 'D-posets'\n",
+    "out_directory = 'D-subposets'\n",
     "L1 = nx.DiGraph()\n",
     "L2 = nx.DiGraph()\n",
     "with codecs.open(join(directory, simplified_dot), 'r', encoding='utf-8') as f:\n",
@@ -491,6 +423,14 @@
     "    counter += 1\n",
     "    print(group_id, end='\\r')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3a66c00",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
